welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: not found: value cp
	cp=cp+1;
        ^Program:7: error: not found: value vuBiscuit
	if (vuBiscuit()==true)
            ^Program:9: error: not found: value cp
		for(l<-0 to cp)
                            ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
for (i<-0 to 5)
      ^