welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
for (i<-0 to 5)
{
	avance();
	cp=cp+1;
	if (vuBiscuit()==true)
	{
		for(l<-0 to cp)
		{
			recule();
		}
	}
	
}
}
